--- a/Prueba - Student.ipynb
+++ b/Prueba - Student.ipynb
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7998813c",
+   "id": "203b9974",
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "907b30bc",
+   "id": "3dc0ebb6",
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e7434a94",
+   "id": "e74994e8",
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7c31e539",
+   "id": "8aa6c04c",
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "eb6fa6b9",
+   "id": "4d806534",
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c2722b68",
+   "id": "36e8562c",
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "97b47444",
+   "id": "9542a042",
    "metadata": {},
    "outputs": [
     {
@@ -1352,7 +1352,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b9f85bc2",
+   "id": "2ad71768",
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "67a6d27b",
+   "id": "85aca97f",
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1464,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "16a85a58",
+   "id": "a6625735",
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "6507b97b",
+   "id": "5d05da55",
    "metadata": {},
    "outputs": [
     {
@@ -1537,7 +1537,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "cd2e07ba",
+   "id": "a70d5767",
    "metadata": {},
    "outputs": [
     {
@@ -1607,7 +1607,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "4fc043df",
+   "id": "165d49f0",
    "metadata": {},
    "outputs": [
     {
@@ -1665,7 +1665,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4e749d8e",
+   "id": "b534383c",
    "metadata": {},
    "outputs": [
     {
@@ -1722,7 +1722,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "4b60ba17",
+   "id": "efe00ede",
    "metadata": {},
    "outputs": [
     {
@@ -1780,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "a8ee2cca",
+   "id": "733a95dd",
    "metadata": {},
    "outputs": [
     {
@@ -1828,7 +1828,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "65cfafa2",
+   "id": "4cdce8f3",
    "metadata": {},
    "outputs": [
     {
@@ -1884,7 +1884,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "42a46d77",
+   "id": "4175c3a3",
    "metadata": {},
    "outputs": [
     {
@@ -1939,8 +1939,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "08b7cb9c",
+   "execution_count": 44,
+   "id": "27d9c367",
    "metadata": {},
    "outputs": [
     {
@@ -1955,10 +1955,10 @@
     {
      "data": {
       "text/plain": [
-       "'\\nSe aprecia que la variable higher es binaria ya que cuenta con 2 posibles resultados.\\nSe aprecia en el gráfico el 83% del total de estudiantes cuenta con acceso a internet en el hogar.\\n'"
+       "'\\nSe aprecia que la variable romantic es binaria ya que cuenta con 2 posibles resultados.\\nSe aprecia en el gráfico el 67% del total no tiene una relación romantica.\\n'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1989,14 +1989,15 @@
     "\n",
     "\"\"\"\n",
     "Se aprecia que la variable romantic es binaria ya que cuenta con 2 posibles resultados.\n",
-    "Se aprecia en el gráfico el 67% del total no tiene una relación romantica.\n",
+    "Se aprecia que la categoría \"no\" la cual indica que no tiene una relacion romantica es la categoria con mayor frecuencia,\n",
+    "con un 67% del total.\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d24fca54",
+   "id": "66731fb1",
    "metadata": {},
    "outputs": [],
    "source": []
