--- a/Prueba - Student.ipynb
+++ b/Prueba - Student.ipynb
@@ -2648,20 +2648,224 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4383eb44",
+   "cell_type": "markdown",
+   "id": "b6f3e55e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Se realizo la interpretación de los coeficientes del modelo g1 a una muestra de variables ya que eran demasiadas y era redundar la logica de la interpretación. \n",
+    "Por otro lado me queda la duda si el df coefs_saturado_g3 para ver si las variables son estadisticamente significativas se utiliza la columna P>|t|. Si lo anterior es lo correcto mis variables para realizar un modelo mas depurado es el que esta a continuación.\n",
+    "Ademas me falto agregar que las variables que son tipo discreta numerica famrel, freetime, goout, Dalc, Walc y health se utilizaran en el siguiente hito para agruparlas.\n",
+    "Cabe mencionar que estas las habia binarizado por lo c"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "id": "0992f015",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Coef.</th>\n",
+       "      <th>Std.Err.</th>\n",
+       "      <th>t</th>\n",
+       "      <th>P&gt;|t|</th>\n",
+       "      <th>[0.025</th>\n",
+       "      <th>0.975]</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Intercept</th>\n",
+       "      <td>22.262326</td>\n",
+       "      <td>5.846064</td>\n",
+       "      <td>3.808088</td>\n",
+       "      <td>0.000165</td>\n",
+       "      <td>10.764378</td>\n",
+       "      <td>33.760274</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>age</th>\n",
+       "      <td>-0.435739</td>\n",
+       "      <td>0.216480</td>\n",
+       "      <td>-2.012837</td>\n",
+       "      <td>0.044899</td>\n",
+       "      <td>-0.861509</td>\n",
+       "      <td>-0.009970</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>absences</th>\n",
+       "      <td>0.071633</td>\n",
+       "      <td>0.029480</td>\n",
+       "      <td>2.429938</td>\n",
+       "      <td>0.015605</td>\n",
+       "      <td>0.013654</td>\n",
+       "      <td>0.129613</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>schoolsup</th>\n",
+       "      <td>-1.403619</td>\n",
+       "      <td>0.682936</td>\n",
+       "      <td>-2.055272</td>\n",
+       "      <td>0.040596</td>\n",
+       "      <td>-2.746807</td>\n",
+       "      <td>-0.060431</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>romantic</th>\n",
+       "      <td>-1.173806</td>\n",
+       "      <td>0.492196</td>\n",
+       "      <td>-2.384836</td>\n",
+       "      <td>0.017620</td>\n",
+       "      <td>-2.141850</td>\n",
+       "      <td>-0.205763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>male</th>\n",
+       "      <td>1.364134</td>\n",
+       "      <td>0.485318</td>\n",
+       "      <td>2.810804</td>\n",
+       "      <td>0.005221</td>\n",
+       "      <td>0.409618</td>\n",
+       "      <td>2.318651</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>studytime_5_10[0]</th>\n",
+       "      <td>0.939033</td>\n",
+       "      <td>0.377826</td>\n",
+       "      <td>2.485359</td>\n",
+       "      <td>0.013410</td>\n",
+       "      <td>0.195931</td>\n",
+       "      <td>1.682135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>studytime_5_10[1]</th>\n",
+       "      <td>0.939033</td>\n",
+       "      <td>0.377826</td>\n",
+       "      <td>2.485359</td>\n",
+       "      <td>0.013410</td>\n",
+       "      <td>0.195931</td>\n",
+       "      <td>1.682135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>failures_1[0]</th>\n",
+       "      <td>-1.270091</td>\n",
+       "      <td>0.357842</td>\n",
+       "      <td>-3.549304</td>\n",
+       "      <td>0.000439</td>\n",
+       "      <td>-1.973890</td>\n",
+       "      <td>-0.566292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>failures_1[1]</th>\n",
+       "      <td>-1.270091</td>\n",
+       "      <td>0.357842</td>\n",
+       "      <td>-3.549304</td>\n",
+       "      <td>0.000439</td>\n",
+       "      <td>-1.973890</td>\n",
+       "      <td>-0.566292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>failures_2[0]</th>\n",
+       "      <td>-2.255542</td>\n",
+       "      <td>0.568205</td>\n",
+       "      <td>-3.969590</td>\n",
+       "      <td>0.000087</td>\n",
+       "      <td>-3.373080</td>\n",
+       "      <td>-1.138005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>failures_2[1]</th>\n",
+       "      <td>-2.255542</td>\n",
+       "      <td>0.568205</td>\n",
+       "      <td>-3.969590</td>\n",
+       "      <td>0.000087</td>\n",
+       "      <td>-3.373080</td>\n",
+       "      <td>-1.138005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>failures_3[0]</th>\n",
+       "      <td>-1.239082</td>\n",
+       "      <td>0.524711</td>\n",
+       "      <td>-2.361455</td>\n",
+       "      <td>0.018752</td>\n",
+       "      <td>-2.271076</td>\n",
+       "      <td>-0.207088</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>failures_3[1]</th>\n",
+       "      <td>-1.239082</td>\n",
+       "      <td>0.524711</td>\n",
+       "      <td>-2.361455</td>\n",
+       "      <td>0.018752</td>\n",
+       "      <td>-2.271076</td>\n",
+       "      <td>-0.207088</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Coef.  Std.Err.         t     P>|t|     [0.025  \\\n",
+       "Intercept          22.262326  5.846064  3.808088  0.000165  10.764378   \n",
+       "age                -0.435739  0.216480 -2.012837  0.044899  -0.861509   \n",
+       "absences            0.071633  0.029480  2.429938  0.015605   0.013654   \n",
+       "schoolsup          -1.403619  0.682936 -2.055272  0.040596  -2.746807   \n",
+       "romantic           -1.173806  0.492196 -2.384836  0.017620  -2.141850   \n",
+       "male                1.364134  0.485318  2.810804  0.005221   0.409618   \n",
+       "studytime_5_10[0]   0.939033  0.377826  2.485359  0.013410   0.195931   \n",
+       "studytime_5_10[1]   0.939033  0.377826  2.485359  0.013410   0.195931   \n",
+       "failures_1[0]      -1.270091  0.357842 -3.549304  0.000439  -1.973890   \n",
+       "failures_1[1]      -1.270091  0.357842 -3.549304  0.000439  -1.973890   \n",
+       "failures_2[0]      -2.255542  0.568205 -3.969590  0.000087  -3.373080   \n",
+       "failures_2[1]      -2.255542  0.568205 -3.969590  0.000087  -3.373080   \n",
+       "failures_3[0]      -1.239082  0.524711 -2.361455  0.018752  -2.271076   \n",
+       "failures_3[1]      -1.239082  0.524711 -2.361455  0.018752  -2.271076   \n",
+       "\n",
+       "                      0.975]  \n",
+       "Intercept          33.760274  \n",
+       "age                -0.009970  \n",
+       "absences            0.129613  \n",
+       "schoolsup          -0.060431  \n",
+       "romantic           -0.205763  \n",
+       "male                2.318651  \n",
+       "studytime_5_10[0]   1.682135  \n",
+       "studytime_5_10[1]   1.682135  \n",
+       "failures_1[0]      -0.566292  \n",
+       "failures_1[1]      -0.566292  \n",
+       "failures_2[0]      -1.138005  \n",
+       "failures_2[1]      -1.138005  \n",
+       "failures_3[0]      -0.207088  \n",
+       "failures_3[1]      -0.207088  "
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coefs_saturado_g3[coefs_saturado_g3[\"P>|t|\"] < 0.05]"
+   ]
   },
   {
    "cell_type": "code",
