--- a/Prueba - Income.ipynb
+++ b/Prueba - Income.ipynb
@@ -3037,9 +3037,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "87281f3e",
+   "metadata": {},
+   "source": [
+    "Realice las transformaciones a las variables capital con logaritmo pero desconozco el problema que no las puede utilzar en el modelo debido que me daba error.\n",
+    "\n",
+    "Respecto de los modelos utilizaré uno saturado, uno depurado con las variables estadisticamente significativas y uno depurado y a la vez estandarizado."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afe6566f",
+   "id": "b0550c0b",
    "metadata": {},
    "outputs": [],
    "source": []
