--- a/Prueba - Student.ipynb
+++ b/Prueba - Student.ipynb
@@ -2649,13 +2649,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6f3e55e",
+   "id": "2c67b6b5",
    "metadata": {},
    "source": [
     "Se realizo la interpretación de los coeficientes del modelo g1 a una muestra de variables ya que eran demasiadas y era redundar la logica de la interpretación. \n",
     "Por otro lado me queda la duda si el df coefs_saturado_g3 para ver si las variables son estadisticamente significativas se utiliza la columna P>|t|. Si lo anterior es lo correcto mis variables para realizar un modelo mas depurado es el que esta a continuación.\n",
     "Ademas me falto agregar que las variables que son tipo discreta numerica famrel, freetime, goout, Dalc, Walc y health se utilizaran en el siguiente hito para agruparlas.\n",
-    "Cabe mencionar que estas las habia binarizado por lo c"
+    "Cabe mencionar que estas las habia binarizado por lo cual el numero de variables eran demasiadas alrededor de 87 columnas por lo cual decidi sacarlas de este primer analisis."
    ]
   },
   {
